ya hace las tablas en tiempo real faltan unos campos

--- a/views/solicitud/index.jade
+++ b/views/solicitud/index.jade
@@ -13,18 +13,19 @@ block content
 				th="Solicitante"
 				th="Tlf. Solicitante"
 				th="Ubicación"
-			each value in resultados
-				tr
-					td=value.prioridad
-					td=value.descripcion
-					td=value.fecha
-					td=value.correo.split('@')[0]
-					if	value.activo
-						td
-							input(type="button",id="#{value.id}",class="solicitud_activacion btn btn-success btn-xs",value="Desactivar")
-					else
-						td
-							input(type="button",id="#{value.id}",class="solicitud_activacion btn btn-danger btn-xs",value="Activar")
-					td=value.solicitante
-					td=value.telefono_solicitante
-					td=value.ubicacion
+			tbody#cuerpo_tabla
+				each value in resultados
+					tr
+						td=value.prioridad
+						td=value.descripcion
+						td=value.fecha
+						td=value.correo.split('@')[0]
+						if	value.activo
+							td
+								input(type="button",id="#{value.id}",class="solicitud_activacion btn btn-success btn-xs",value="Desactivar")
+						else
+							td
+								input(type="button",id="#{value.id}",class="solicitud_activacion btn btn-danger btn-xs",value="Activar")
+						td=value.solicitante
+						td=value.telefono_solicitante
+						td=value.ubicacion
